--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "pdfreader": "^1.2.8"
+    "node-tesseract-ocr": "^2.2.1",
+    "pdfreader": "^1.0.10"
   }
 }
