--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "node-tesseract-ocr": "^2.2.1",
-    "pdfreader": "^1.0.10"
+    "pdfreader": "^1.0.10",
+    "tesseract.js": "^2.1.4"
   }
 }
