--- a/package.json
+++ b/package.json
@@ -2,9 +2,18 @@
   "name": "pdfreaderProjerct",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
+  },
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "pdfreader": "^1.0.10",
     "tesseract.js": "^2.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
