--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "canvas": "^2.8.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "pdfreader": "^1.0.10",
     "tesseract.js": "^2.1.4"
   },
